--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -26,8 +26,9 @@ jobs:
     steps:
       - name: Get repository name
         run: |
-          echo "IMAGE_REPO=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
-          echo "IMAGE_NAME=${GITHUB_REPOSITORY%/*}" >> $GITHUB_ENV
+          GITHUB_REPOSITORY_LOWERCASED=$(echo $GITHUB_REPOSITORY | tr '[A-Z]' '[a-z]')
+          echo "IMAGE_NAME=${GITHUB_REPOSITORY_LOWERCASED#*/}" >> $GITHUB_ENV
+          echo "IMAGE_REPO=${GITHUB_REPOSITORY_LOWERCASED%/*}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
 
@@ -39,16 +40,22 @@ jobs:
 
       - name: Push image
         run: |
-          IMAGE_ID=${{ REGISTRY }}/${{ IMAGE_REPO }}/$IMAGE_NAME
-          # This changes all uppercase characters to lowercase.
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          IMAGE_ID=${{ env.REGISTRY }}/${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}
+          IS_LATEST=
+
           # This strips the git ref prefix from the version.
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          # This strips the "v" prefix from the tag name.
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
           # This uses the Docker `latest` tag convention.
-          [ "$VERSION" == "main" ] && VERSION=latest
+          [ "$VERSION" == "main" ] && IS_LATEST=latest
+
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
+          echo IS_LATEST=$IS_LATEST
+
           docker tag $IMAGE_REPO/$IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
+
+          # Tag latest if branch main
+          [ "$IS_LATEST" == "latest" ] && docker tag $IMAGE_REPO/$IMAGE_NAME $IMAGE_ID:latest
+          [ "$IS_LATEST" == "latest" ] && docker push $IMAGE_ID:latest
