--- a/.github/workflows/manual-delivery.yml
+++ b/.github/workflows/manual-delivery.yml
@@ -1,5 +1,5 @@
 
-name: continuous-delivery-alternative
+name: manual-delivery
 
 # This workflow runs when any of the following occur:
 # - A push is made to any branch
@@ -15,7 +15,7 @@ env:
 
 # There is a single job in this workflow. It's configured to run on the latest available version of Ubuntu.
 jobs:
-  build-and-push-image-alt:
+  build-and-push-image:
     runs-on: ubuntu-latest
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
